// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`It matches the last accepted Snapshot 1`] = `
<Fragment>
  <Relay(DefaultLayout)
    allowedGroups={
      Array [
        "User",
      ]
    }
    session={
      Object {
        " $fragmentRefs": Object {
          "defaultLayout_session": true,
        },
        "ciipUserBySub": Object {
          "firstName": "max",
          "id": "abc",
          "lastName": "powers",
        },
      }
    }
    title="Submission Certification"
  >
    <Relay(ApplicationDetailsComponent)
      application={
        Object {
          " $fragmentRefs": Object {
            "ApplicationDetailsContainer_application": true,
            "CertificationSignature_application": true,
          },
          "latestDraftRevision": Object {
            "certificationUrl": Object {
              "certificationSignature": "test",
              "hashMatches": true,
            },
          },
        }
      }
      query={
        Object {
          " $fragmentRefs": Object {
            "ApplicationDetailsContainer_query": true,
          },
          "application": Object {
            " $fragmentRefs": Object {
              "ApplicationDetailsContainer_application": true,
              "CertificationSignature_application": true,
            },
            "latestDraftRevision": Object {
              "certificationUrl": Object {
                "certificationSignature": "test",
                "hashMatches": true,
              },
            },
          },
          "session": Object {
            " $fragmentRefs": Object {
              "defaultLayout_session": true,
            },
            "ciipUserBySub": Object {
              "firstName": "max",
              "id": "abc",
              "lastName": "powers",
            },
          },
        }
      }
      review={false}
    />
  </Relay(DefaultLayout)>
  <JSXStyle
    id="1964638049"
  >
    .signatureCanvas{border:1px solid #bbb;padding:30px;width:80%;background:#eee;border-radius:6px;margin-bottom:60px;}
  </JSXStyle>
</Fragment>
`;

exports[`It shows a "data has changed" error if hashMatches is false 1`] = `
<Fragment>
  <Relay(DefaultLayout)
    allowedGroups={
      Array [
        "User",
      ]
    }
    session={
      Object {
        " $fragmentRefs": Object {
          "defaultLayout_session": true,
        },
        "ciipUserBySub": Object {
          "firstName": "max",
          "id": "abc",
          "lastName": "powers",
        },
      }
    }
    title="Submission Certification"
  >
    <Card
      body={false}
      className="text-center"
    >
      <CardHeader>
        Error
      </CardHeader>
      <CardBody>
        <CardTitle>
          The data has changed
        </CardTitle>
        <CardText>
          The application data associated with this certification URL has been modified after the URL was generated.
        </CardText>
        <CardText>
          A notification has been automatically sent to the reporter requesting the submission of a new URL with the updated application data.
        </CardText>
      </CardBody>
      <CardFooter
        className="text-muted"
      >
        No action is required on your part
      </CardFooter>
    </Card>
  </Relay(DefaultLayout)>
  <JSXStyle
    id="1964638049"
  >
    .signatureCanvas{border:1px solid #bbb;padding:30px;width:80%;background:#eee;border-radius:6px;margin-bottom:60px;}
  </JSXStyle>
</Fragment>
`;
